[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen-amazeing"
version = "1.0.0"
description = "Reusable maze generator for the 42 A-Maze-ing project"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "42 Students"}]

[tool.setuptools]
packages = ["src"]
py-modules = ["mazegen_amazeing"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
